modules/testAs/compile_errors.log
/Users/john/Projects/CodeOrchestra/code-orchestra-langs/modules/testAs/source_gen/testAs/MyClass.as(7): col: 7 Error: Syntax error.

      <!TextGen not found for 'codeOrchestra.actionScript.structure.ParenthesizedExpression'!>;
      ^

/Users/john/Projects/CodeOrchestra/code-orchestra-langs/modules/testAs/source_gen/testAs/MyClass.as(7): col: 27 Error: Syntax error: expected a definition keyword (such as function) after attribute extGen, not not.

      <!TextGen not found for 'codeOrchestra.actionScript.structure.ParenthesizedExpression'!>;
                          ^

/Users/john/Projects/CodeOrchestra/code-orchestra-langs/modules/testAs/source_gen/testAs/MyClass.as(7): col: 95 Error: Syntax error: expecting rightbrace before semicolon.

      <!TextGen not found for 'codeOrchestra.actionScript.structure.ParenthesizedExpression'!>;
                                                                                              ^

